--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 		<div class="hd">
 			<h1>PRASTIO BAGUSINDRA SUDEWO</h1>
-			<h3>QUALITY ASSURANCE</h3>
+			<h3>WEB DEVELOPER</h3>
 		</div>
 	</header>
 
