--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="java.js"></script>
 </head>
-<body>
+<body background="https://i.ibb.co/dgKFpmT/bg.jpg">
 	<header class="hbackground">
 		<div class="ft">
 			<img src="foto.jpg" width="180px" height="180px">
@@ -29,6 +29,7 @@
 		<div id="Introduction" class="tabcontent">
 			<h3>Introduction</h3><hr>
 			<p>Hi there! I'm Prastio Bagusindra, I am 21 years old and I am interested in the world of computer science like a Quality Assurance, Software Testing and the development of several web-based application. That's why I want to apply the knowledge that I already know to be able to help a company that is looking to develope the business in the field of startup.</p>
+			<p>An ambitious problem solver with a passion for online businesses, and who would like to join a team like-minded developers. I has much experience of creating logical and innovative solutions to complex problem. As someone who takes responsibility for personal development, I'm continually evaluating and upgrading skills so thatI stay at the cutting edge of web development.</p>
 		</div>
 
 		<div id="Profile" class="tabcontent">
