--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body background="https://i.ibb.co/dgKFpmT/bg.jpg">
 	<header class="hbackground">
 		<div class="ft">
-			<img src="foto.jpg" width="180px" height="180px">
+			<img src="img/foto.jpg" width="180px" height="180px">
 		</div>
 
 		<div class="hd">
@@ -48,13 +48,13 @@
 			<h3>Education</h3><hr>
 			<div class="edu">
 				<div>
-					<img src="sma.png" width="150px" height="150px">
+					<img src="img/sma.png" width="150px" height="150px">
 					<p>
 						 SMAN 22 BANDUNG<br>2013 - 2016
 					</p>
 				</div>
 				<div>
-					<img src="telkom.png" width="150px" height="150px">
+					<img src="img/telkom.png" width="150px" height="150px">
 					<p>
 						TELKOM UNIVERSITY<br>2016 - PRESENT
 					</p>
@@ -145,7 +145,7 @@
 			<h3>Contact</h3><hr>
 			<div class="logo">
 				<div class="logopic">
-					<a target="_blank" href="https://www.facebook.com/profile.php?id=100000073380020&ref=bookmarks"><img src="fb.png" alt=""></a>
+					<a target="_blank" href="https://www.facebook.com/profile.php?id=100000073380020&ref=bookmarks"><img src="img/fb.png" alt=""></a>
 				</div>
 				<div class="logolabel">		
 					<p>Prastio Bagusindra</p>
@@ -153,7 +153,7 @@
 			</div>
 			<div class="logo">
 				<div class="logopic">
-					<a target="_blank" href="https://twitter.com/prasbs"><img src="twitter.png"></a>
+					<a target="_blank" href="https://twitter.com/prasbs"><img src="img/twitter.png"></a>
 				</div>
 				<div class="logolabel">		
 					<p>prasbs</p>
@@ -161,7 +161,7 @@
 			</div>
 			<div class="logo">
 				<div class="logopic">
-					<a target="_blank" href="https://www.instagram.com/prastiobs/"><img src="ig.png"></a>
+					<a target="_blank" href="https://www.instagram.com/prastiobs/"><img src="img/ig.png"></a>
 				</div>
 				<div class="logolabel">		
 					<p>prastiobs</p>
@@ -169,7 +169,7 @@
 			</div>
 			<div class="logo">
 				<div class="logopic">
-					<a href="mailto:prastiobagusindra@gmail.com?Subject=Hello"><img src="email.png"></a>
+					<a href="mailto:prastiobagusindra@gmail.com?Subject=Hello"><img src="img/email.png"></a>
 				</div>
 				<div class="logolabel">		
 					<p>prastiobagusindra@gmail.com</p>
@@ -177,7 +177,7 @@
 			</div>
 			<div class="logo">
 				<div class="logopic">
-					<img src="phone.png">
+					<img src="img/phone.png">
 				</div>
 				<div class="logolabel">		
 					<p>+62 81809995929</p>
@@ -185,7 +185,7 @@
 			</div>
 			<div class="logo">
 				<div class="logopic">
-					<a target="_blank" href="https://www.google.com/maps/place/6%C2%B058'30.1%22S+107%C2%B033'07.2%22E/@-6.9749745,107.5502834,17z/data=!4m5!3m4!1s0x0:0x0!8m2!3d-6.9750185!4d107.552002?hl=en"><img src="gm.png">
+					<a target="_blank" href="https://www.google.com/maps/place/6%C2%B058'30.1%22S+107%C2%B033'07.2%22E/@-6.9749745,107.5502834,17z/data=!4m5!3m4!1s0x0:0x0!8m2!3d-6.9750185!4d107.552002?hl=en"><img src="img/gm.png">
 				</div></a>
 				<div class="logolabel">		
 					<p>Find Me on Google Maps!</p>
